force-app/main/default/objects/Product2/fields/activate_with_other_products__c.field-meta.xml
<CustomField>
    <fullName>activate_with_other_products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this product should not have an activation line itself, but is connected to a specific activation line during activation.</description>
    <inlineHelpText>Does this product require activation, but is it linked to another activation line during activation rather than having a line by itself? Often for products such as VAS&apos; or SLA&apos;s. Requires &quot;Activation record type&quot; to be set.</inlineHelpText>
    <label>Activate with other products</label>
    <type>Checkbox</type>
</CustomField>