force-app/main/default/objects/Product2/fields/Activation_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Activation_Record_Type__c</fullName>
    <description>The type of activation, if any, that is required for this product</description>
    <inlineHelpText>Do activation agents need to do anything in order to activate this product? If yes, which category does the product fit into? If no, set to &quot;No activation needed&quot;.</inlineHelpText>
    <label>Activation Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No activation needed</fullName>
            </value>
            <value>
                <fullName>DSL/Coax</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Home office</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>SMS manager</fullName>
            </value>
            <value>
                <fullName>4G</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Service packages</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>ACE Cloud</fullName>
            </value>
            <value>
                <fullName>DDoS</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Business Internet</fullName>
            </value>
            <value>
                <fullName>Erhvervsinternet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>