force-app/main/default/objects/Product2/fields/address_required__c.field-meta.xml
<CustomField>
    <fullName>address_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the sale of one of this product connected to exactly one address? Used for creating address lines on the quote and enter into the activation lines.</description>
    <inlineHelpText>Is the sale of one of this product connected to exactly one address?</inlineHelpText>
    <label>Address required</label>
    <type>Checkbox</type>
</CustomField>