force-app/main/default/objects/Product2/fields/Always_Manually__c.field-meta.xml
<CustomField>
    <fullName>Always_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story 318</description>
    <inlineHelpText>Temporary field to indicate how product is activated. Tick this box if product is always set-up manually in billing system</inlineHelpText>
    <label>Always Manually</label>
    <type>Checkbox</type>
</CustomField>