force-app/main/default/objects/Product2/fields/Available_Monthly_Data_MB__c.field-meta.xml
<CustomField>
    <fullName>Available_Monthly_Data_MB__c</fullName>
    <description>Indicates the &quot;Available Monthly Data (MB)&quot;. Needed for Downgrade/upgrade decision.</description>
    <label>Available Monthly Data (MB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>