force-app/main/default/objects/Product2/fields/Barring_Title_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Barring_Title_for_Portal__c</fullName>
    <formula>IF( TEXT($User.LanguageLocaleKey) = &quot;da&quot;,

CASE(ProductCode, 
&quot;16400&quot;,&quot;Spærring 3G Indstillinger&quot;,
&quot;16401&quot;,&quot;Spærring 4G Indstillinger&quot;,
&quot;16402&quot;,&quot;Spærring Data Services&quot;,
&quot;16403&quot;,&quot;Spærring International&quot;,
&quot;16404&quot;,&quot;Spærring MMS&quot;,
&quot;16405&quot;,&quot;Spærring National og Internat. Roaming&quot;,
&quot;16406&quot;,&quot;Forbrugskontrol&quot;,
&quot;16407&quot;,&quot;Spær alle indgående opkald&quot;, 
&quot;16408&quot;,&quot;Spær alle udgående opkald&quot;,
&quot;16409&quot;,&quot;Spær indg. opkald i udlandet&quot;, 
&quot;16410&quot;,&quot;Spær indholdstakseret SMS&quot; ,
&quot;16411&quot;,&quot;Spær opkald til 90 numre&quot; ,
&quot;16412&quot;,&quot;Spær udg. fra udl. undt til DK&quot;, 
&quot;16413&quot;,&quot;Spær udg. opkald fra udlandet&quot; ,
&quot;16414&quot;,&quot;Spær udg. opkald til int. nr&quot; ,
&quot;16415&quot;,&quot;Standard GSM Spærring&quot;,
&quot;16416&quot;,&quot;Spær alle opkald&quot;,
&quot;not found&quot;)
,
CASE(ProductCode , 
&quot;16400&quot;,&quot;Barring 3G settings&quot; ,
&quot;16401&quot;,&quot;Barring 4G settings&quot;,
&quot;16402&quot;,&quot;Barring data services&quot;,
&quot;16403&quot;,&quot;Barring International Roaming&quot;,
&quot;16404&quot;,&quot;Barring MMS&quot; ,
&quot;16405&quot;,&quot;Barring National &amp; Intl roaming&quot;,
&quot;16406&quot;,&quot;Owner Control&quot;,
&quot;16407&quot;,&quot;Barring all incoming calls&quot;,
&quot;16408&quot;,&quot;Barring all outbound calls&quot;,
&quot;16409&quot;,&quot;Barring Inbound International calls&quot;,
&quot;16410&quot;,&quot;Barring Naughty SMS services&quot;,
&quot;16411&quot;,&quot;Barring Exotic Hotline calls&quot;,
&quot;16412&quot;,&quot;Barring outgoing calls from abroad except to Denmark&quot;,
&quot;16413&quot;,&quot;Barring outgoing calls from abroad&quot;,
&quot;16414&quot;,&quot;Barring outgoing International calls&quot;,
&quot;16415&quot;,&quot;Standard GSM Barring&quot; ,
&quot;16416&quot;,&quot;Total Barring of calls&quot;,
&quot;yay&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Barring Title for Portal</label>
    <type>Text</type>
</CustomField>