force-app/main/default/objects/Product2/fields/bc_approval__c.field-meta.xml
<CustomField>
    <fullName>bc_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logic in place as long as MIT needs to be used</description>
    <inlineHelpText>If a MIT approval is required on product (relevant for all datanet products and some data products)</inlineHelpText>
    <label>BC approval</label>
    <type>Checkbox</type>
</CustomField>