force-app/main/default/objects/Product2/fields/Cerillion_Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Cerillion_Billing_Code__c</fullName>
    <description>Holds the Billing Code value from Cerillion. Implemented as part of PoC for new Norlys product Erhvervsinternet.</description>
    <label>Cerillion Billing Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>