force-app/main/default/objects/Product2/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <description>Used for the logic of determining whether an amendment is Upsale or Cross-Sale when new Quote Lines are added. This is to avoid having to recursively find the top level container for the new Quote Lines. The field should ALWAYS have a value, and the Salesforce Team has the responsibility of entering the value when a Product is implemented (DKT-36089).</description>
    <label>Container</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Internet &amp; Datanet</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Business Internet</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Additional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>