force-app/main/default/objects/Product2/fields/Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group__c</fullName>
    <description>This field is used to link the subscriptions to right contract</description>
    <label>Contract Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>