force-app/main/default/objects/Product2/fields/Delivery_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Product_Group__c</fullName>
    <label>Delivery Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Product_Groups</valueSetName>
    </valueSet>
</CustomField>