force-app/main/default/objects/Product2/fields/Document_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Document_Identifier__c</fullName>
    <label>Document Identifier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate APN</fullName>
            </value>
            <value>
                <fullName>DDOS</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Operator Connect Fixed</fullName>
            </value>
            <value>
                <fullName>Operator Connect Mobile</fullName>
            </value>
            <value>
                <fullName>Data Type Products</fullName>
            </value>
            <value>
                <fullName>Mobile Type Products</fullName>
            </value>
            <value>
                <fullName>Fastnet Type Products</fullName>
            </value>
            <value>
                <fullName>IOT Type Products</fullName>
            </value>
            <value>
                <fullName>ACE Type Products</fullName>
            </value>
            <value>
                <fullName>ACE Cloud</fullName>
            </value>
            <value>
                <fullName>Mobile Pricesheet</fullName>
            </value>
            <value>
                <fullName>Internet Fiber</fullName>
            </value>
            <value>
                <fullName>Internet DSL</fullName>
            </value>
            <value>
                <fullName>Datanet Fiber</fullName>
            </value>
            <value>
                <fullName>Datanet DSL</fullName>
            </value>
            <value>
                <fullName>Datanet 4G</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Fleet Complete</fullName>
            </value>
            <value>
                <fullName>Home Office New</fullName>
            </value>
            <value>
                <fullName>Home Office Old</fullName>
            </value>
            <value>
                <fullName>Telia Insight</fullName>
            </value>
            <value>
                <fullName>Business Internet</fullName>
            </value>
            <value>
                <fullName>Roaming</fullName>
            </value>
            <value>
                <fullName>Telia Managed Service</fullName>
            </value>
            <value>
                <fullName>SMS Service</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Secured Managed Gateway</fullName>
            </value>
            <value>
                <fullName>Non Standard Product</fullName>
            </value>
            <value>
                <fullName>Trafik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>