force-app/main/default/objects/Product2/fields/gross_revenue_50__c.field-meta.xml
<CustomField>
    <fullName>gross_revenue_50__c</fullName>
    <description>Used in price rules to control the discount allowed based on gross revenue across a subset pf products</description>
    <inlineHelpText>Used in price rules to control discount allowed based on gross revenue across a subset of products. NOTE: if gross revenue is based on a group of products the gross revenue will have to be added directly in the price rule QL: DiscountApproval</inlineHelpText>
    <label>Gross Revenue 50</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>