force-app/main/default/objects/Product2/fields/Is_Delivery_Express__c.field-meta.xml
<CustomField>
    <fullName>Is_Delivery_Express__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If product option Express Delivery har been selected this checkbox will be true</description>
    <label>Is Delivery Express</label>
    <type>Checkbox</type>
</CustomField>