force-app/main/default/objects/Product2/fields/is_sla_product__c.field-meta.xml
<CustomField>
    <fullName>is_sla_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SLA product</label>
    <type>Checkbox</type>
</CustomField>