force-app/main/default/objects/Product2/fields/L1_Approval_Required_to_Sell_Product__c.field-meta.xml
<CustomField>
    <fullName>L1_Approval_Required_to_Sell_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US424. Indicates that a level 1 approval is required to sell this product (manager + bid team).</description>
    <inlineHelpText>Indicates that a level 1 approval is required to sell this product (manager + bid team).</inlineHelpText>
    <label>L1 Approval Required to Sell Product</label>
    <type>Checkbox</type>
</CustomField>