force-app/main/default/objects/Product2/fields/L1_Discount__c.field-meta.xml
<CustomField>
    <fullName>L1_Discount__c</fullName>
    <description>User story 115/257.</description>
    <inlineHelpText>Maximum discount that can be given on product before it is sent for approval</inlineHelpText>
    <label>L1 Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>