force-app/main/default/objects/Product2/fields/L2_Approval_Required_to_Sell_Product__c.field-meta.xml
<CustomField>
    <fullName>L2_Approval_Required_to_Sell_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US424. Indicates that a level 2 approval is required to sell this product (manager + bid team + commercial management).</description>
    <inlineHelpText>Indicates that a level 2 approval is required to sell this product (manager + bid team + commercial management).</inlineHelpText>
    <label>L2 Approval Required to Sell Product</label>
    <type>Checkbox</type>
</CustomField>