force-app/main/default/objects/Product2/fields/l2_discount__c.field-meta.xml
<CustomField>
    <fullName>l2_discount__c</fullName>
    <description>User story 115/257</description>
    <inlineHelpText>Maximum discount that second level approval can give on product</inlineHelpText>
    <label>L2 Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>