force-app/main/default/objects/Product2/fields/Max_Subsidy_0_20__c.field-meta.xml
<CustomField>
    <fullName>Max_Subsidy_0_20__c</fullName>
    <description>Max Subsidy allowed up and incl 20% discount</description>
    <inlineHelpText>Max Subsidy allowed  up and incl 20% discount</inlineHelpText>
    <label>Max Subsidy 0-20%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>