force-app/main/default/objects/Product2/fields/Max_Subsidy_25_45__c.field-meta.xml
<CustomField>
    <fullName>Max_Subsidy_25_45__c</fullName>
    <description>Max Subsidy allowed between 25% and 45% discount</description>
    <inlineHelpText>Max Subsidy allowed between 25% and 45% discount</inlineHelpText>
    <label>Max Subsidy 25-45%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>