force-app/main/default/objects/Product2/fields/Max_Subsidy_50_60__c.field-meta.xml
<CustomField>
    <fullName>Max_Subsidy_50_60__c</fullName>
    <description>Max Subsidy allowed between 50 % and 60% discount</description>
    <inlineHelpText>Max Subsidy allowed between 50 % and 60% discount</inlineHelpText>
    <label>Max Subsidy 50-60%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>