force-app/main/default/objects/Product2/fields/New_Sales_Automatically__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story 318</description>
    <inlineHelpText>Temporary field to indicate how product is activated. Tick this box if product is part of the automated setup in billing system (Fokus) vi a the Order API</inlineHelpText>
    <label>New Sales - Automatically</label>
    <type>Checkbox</type>
</CustomField>