force-app/main/default/objects/Product2/fields/New_Sales_Manually__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User story 318</description>
    <inlineHelpText>Temporary field to indicate how product is activated. Tick this box if product should be setup manually in terms of activation product in billing system (Fokus)</inlineHelpText>
    <label>New Sales Manually</label>
    <type>Checkbox</type>
</CustomField>