force-app/main/default/objects/Product2/fields/Onboarding_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Configuration__c</fullName>
    <description>Various settings for the onboarding flows, e.g., indicating where a product should be displayed and more.</description>
    <label>Onboarding Configuration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ShowInValueAddedServicesSummary</fullName>
                <label>Show in ValueAddedServices Summary</label>
            </value>
            <value>
                <fullName>ShowInSubscriptionSummary</fullName>
                <label>Show in Subscription Summary</label>
            </value>
            <value>
                <fullName>ShowInBillingAccountSummary</fullName>
                <label>Show in BillingAccount Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>