force-app/main/default/objects/Product2/fields/Product_detail__c.field-meta.xml
<CustomField>
    <fullName>Product_detail__c</fullName>
    <description>Product details displayed on the contract resume</description>
    <label>Product detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>