force-app/main/default/objects/Product2/fields/Product_Gearing__c.field-meta.xml
<CustomField>
    <fullName>Product_Gearing__c</fullName>
    <description>Internal field used for compensation to weight products based on their strategic importance. Only used on new sales</description>
    <inlineHelpText>Internal field used for compensation to weight products based on their strategic importance. Only used on new sales</inlineHelpText>
    <label>Product Gearing</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>