force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Used in Quote templates to evaluate if specific addendums should be added to Quote/Contract or not. Used by Onboarding portal to filter certain things. 

NOTE: It&apos;s best to be careful when changing any of the existing values here. Values Assigned automatically by Process Builder.</description>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>