force-app/main/default/objects/Product2/fields/Product_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_2__c</fullName>
    <description>Used to get the 18 digits ID for reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID 2</label>
    <type>Text</type>
</CustomField>