force-app/main/default/objects/Product2/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <description>Display Product Image on quote</description>
    <formula>IMAGE(Product_Image_Url_Link__c, &apos;image url&apos;, 40, 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>