force-app/main/default/objects/Product2/fields/Product_Image_Url_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Url_Link__c</fullName>
    <description>Used to hold link to product images to be displayed on quote via field Product Image</description>
    <label>Product Image Url Link</label>
    <type>Url</type>
</CustomField>