force-app/main/default/objects/Product2/fields/ProductAPI_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>ProductAPI_Product_Type__c</fullName>
    <description>Telia specific value set to have a logic for fokus (if type = soc then create product item)</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Product_Type</valueSetName>
    </valueSet>
</CustomField>