force-app/main/default/objects/Product2/fields/ProductAPI_Telia_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>ProductAPI_Telia_Product_Id__c</fullName>
    <description>Telia specific informationof the product to be used in Fokus</description>
    <label>Telia Product Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>