force-app/main/default/objects/Product2/fields/ProductAPI_Telia_Product_Id_Reseller__c.field-meta.xml
<CustomField>
    <fullName>ProductAPI_Telia_Product_Id_Reseller__c</fullName>
    <description>SOC code that comes from focus. 

This code is specific to the reseller product that lives inside focus i.e.</description>
    <label>Telia Product Id Reseller</label>
    <length>150</length>
    <type>Text</type>
</CustomField>