force-app/main/default/objects/Product2/fields/Renewal_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Story 318</description>
    <inlineHelpText>Temporary field to indicate how product is activated. Tick this box if product is setup automatically in billing system (Fokus) via Robot (RPA)</inlineHelpText>
    <label>Renewal - Automatically</label>
    <type>Checkbox</type>
</CustomField>