force-app/main/default/objects/Product2/fields/requires_activation__c.field-meta.xml
<CustomField>
    <fullName>requires_activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to generate activation lines for use in the fulfilment process</description>
    <inlineHelpText>Check this to generate activation lines for use in the fulfilment process</inlineHelpText>
    <label>Requires activation</label>
    <type>Checkbox</type>
</CustomField>