force-app/main/default/objects/Product2/fields/Requires_Activation_Check__c.field-meta.xml
<CustomField>
    <fullName>Requires_Activation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is used to include/exclude the product from the activation check calculations</description>
    <inlineHelpText>The field is used to include/exclude the product from the activation check calculations</inlineHelpText>
    <label>Requires Activation Check</label>
    <type>Checkbox</type>
</CustomField>