force-app/main/default/objects/Product2/fields/Responsible_Commercial_Manager__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Commercial_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The responsible Commercial Manager for this specific product.</description>
    <inlineHelpText>The responsible Commercial Manager for this specific product.</inlineHelpText>
    <label>Responsible Commercial Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>