force-app/main/default/objects/Product2/fields/Responsible_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The responsible Product Manager for this specific product.</description>
    <inlineHelpText>The responsible Product Manager for this specific product.</inlineHelpText>
    <label>Responsible Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>