force-app/main/default/objects/Product2/fields/revenue_discount_0__c.field-meta.xml
<CustomField>
    <fullName>revenue_discount_0__c</fullName>
    <description>Used in price rules to control the discount allowed based on gross revenue across a subset pf products</description>
    <inlineHelpText>Used in price rules to control the discount allowed based on gross revenue across a subset pf products</inlineHelpText>
    <label>Revenue Discount 0</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>