force-app/main/default/objects/Product2/fields/revenue_group_based__c.field-meta.xml
<CustomField>
    <fullName>revenue_group_based__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in discount price rules to rule out products that are included in group based revenue logic (eg. M2M products)</description>
    <inlineHelpText>Click this tick box if the discount revenue logic is based on a group of products</inlineHelpText>
    <label>Revenue Group Based</label>
    <type>Checkbox</type>
</CustomField>