force-app/main/default/objects/Product2/fields/Roaming_Max_Discount_All_MA__c.field-meta.xml
<CustomField>
    <fullName>Roaming_Max_Discount_All_MA__c</fullName>
    <inlineHelpText>Max roaming discount that the MA sales reps can give on this product when ALL users sign up for roaming</inlineHelpText>
    <label>Roaming Max Discount All MA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>