force-app/main/default/objects/Product2/fields/Simple_activation__c.field-meta.xml
<CustomField>
    <fullName>Simple_activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the only requirement for activating this product is billing, this should be enabled. If it is enabled, an activation record type should still be set.</description>
    <inlineHelpText>During activation, is an activation line for this product only used for billing?</inlineHelpText>
    <label>Simple activation</label>
    <type>Checkbox</type>
</CustomField>