force-app/main/default/objects/Product2/fields/SubsidyApproved__c.field-meta.xml
<CustomField>
    <fullName>SubsidyApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to identify if this product is approved to give a subsidy upon. Is used in price rule to restrict amount on only products which is subsidy approved= TRUE</description>
    <inlineHelpText>Field used to identify if this product is approved to give a subsidy upon</inlineHelpText>
    <label>SubsidyApproved</label>
    <type>Checkbox</type>
</CustomField>