force-app/main/default/objects/Product2/fields/Telia_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Telia_Product_Code__c</fullName>
    <label>Telia Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>