force-app/main/default/objects/Product2/fields/UC_Invoice__c.field-meta.xml
<CustomField>
    <fullName>UC_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UC Invoice</label>
    <type>Checkbox</type>
</CustomField>