force-app/main/default/objects/Product2/validationRules/Actvtn_type_if_related_to_other_actvtn.validationRule-meta.xml
<ValidationRule>
    <fullName>Actvtn_type_if_related_to_other_actvtn</fullName>
    <active>true</active>
    <description>Ensures that an activation record type is set if the product is related to the activation of another product</description>
    <errorConditionFormula>ISPICKVAL(Activation_Record_Type__c, &quot;No activation needed&quot;) &amp;&amp;  activate_with_other_products__c</errorConditionFormula>
    <errorDisplayField>Activation_Record_Type__c</errorDisplayField>
    <errorMessage>If this product is activated with other products, it must have the activation record type specified.</errorMessage>
</ValidationRule>